--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+:root{
+  --Grain: #d7cec7;
+  --Chalkboard: #565656;
+  --Oxblood: #76323f;
+  --Tan: #C09F80;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +12,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: var(--Grain) !important;
  
 }
 
