--- a/src/components/Nav/style.css
+++ b/src/components/Nav/style.css
@@ -31,6 +31,14 @@
     background-color: rgba(178, 34, 34, 0.5) !important;
 }
 
+.icon{
+    color: white;
+}
+.link{
+    color: white;
+    text-decoration: none;
+    
+}
 
 
 /* new */
@@ -42,4 +50,8 @@
 #logoText{
     font-family: 'MonteCarlo', cursive;
     
+}
+.MuiDrawer-paper{
+    background-color: rgba(178, 34, 34, 0.7) !important;
+    backdrop-filter: blur(3px);
 }
