--- a/src/pages/whoWeAre/style.css
+++ b/src/pages/whoWeAre/style.css
@@ -1,5 +1,5 @@
 #famPic{
-    width: 100%;
+    width: 900px;
     height: 50%;
-    /* background-image: ""; */
+    background: url("../../images/Central.jpeg");
 }
