--- a/src/components/Nav/style.css
+++ b/src/components/Nav/style.css
@@ -28,7 +28,8 @@
 
 }
 .MuiAppBar-root{
-    background-color: rgba(178, 34, 34, 0.5) !important;
+   
+    background-color: var(--Oxblood) !important;
 }
 
 .icon{
@@ -38,6 +39,9 @@
     color: white;
     text-decoration: none;
     
+}
+.MuiAppBar-positionFixed{
+    position: inherit !important;
 }
 
 
@@ -52,6 +56,6 @@
     
 }
 .MuiDrawer-paper{
-    background-color: rgba(178, 34, 34, 0.7) !important;
+    
     backdrop-filter: blur(3px);
 }
