--- a/src/pages/contact/style.css
+++ b/src/pages/contact/style.css
@@ -1,7 +1,7 @@
 #contactContain {
   background-image: url("http://placekitten.com/200/300");
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 91vh;
   background-size: cover;
   position: relative;
 }
