--- a/src/components/style.css
+++ b/src/components/style.css
@@ -9,6 +9,7 @@
     min-height: 91vh;
     
 }
+/* First Slide */
 #firstSlide{
     background: linear-gradient(
         to top,
@@ -98,4 +99,18 @@
         padding: 0px
     }
     
+}
+
+/* Second Slide */
+#secondSlide{
+    background: linear-gradient(
+        to top,
+        rgba(0,0,0, 0.8),
+        rgba(0,0,0, 0.0),
+        rgba(255, 255, 255, 0.8)
+      ),url(../images/costa-rica-carry.jpeg),url(../images/costa-rica-worship.jpeg);
+    /* background: url(../images/plant.jpg); */
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
 }
