--- a/src/pages/contact/style.css
+++ b/src/pages/contact/style.css
@@ -1,5 +1,11 @@
 #contactContain {
-  background-image: url("http://placekitten.com/200/300");
+  background: linear-gradient(
+    to top,
+    rgba(0,0,0, 0.9),
+    rgba(0,0,0, 0.0),
+    rgba(0,0,0, 0.9)
+  ),url(../../images/costa-rica-trek.jpeg);
+  /* background: url(../../images/costa-rica-trek.jpeg); */
   width: 100%;
   height: 91vh;
   background-size: cover;
@@ -12,7 +18,7 @@
   transform: translate(-50%, -50%);
 
   min-height: 60vh;
-  background-color: rgba(128, 128, 128, 0.5);
+  background-color: rgba(66, 66, 66, 0.8);
   backdrop-filter: blur(2px);
   border-radius: 10px;
 }
@@ -20,11 +26,11 @@
   text-align: center;
   text-decoration: none;
   margin-bottom: 0%;
-  color: var(--Oxblood);
+  color: white;
 }
 hr {
   width: 50%;
-  border-color: var(--Oxblood);
+  border-color: var(--Tan);
 }
 
 /* a:hover {
@@ -36,7 +42,7 @@ svg:hover{
 } */
 #contactH2 {
   text-align: center;
-  color: var(--Oxblood);
+  color: white;
   margin-bottom: 0;
 }
 .linkContain {
@@ -48,4 +54,5 @@ svg:hover{
 #contactPara {
   padding-left: 20px;
   padding-right: 20px;
+  color: white;
 }
