--- a/src/pages/whoWeAre/style.css
+++ b/src/pages/whoWeAre/style.css
@@ -1,3 +1,8 @@
+
+#whoWeAreContain{
+    background-color: var(--Grain);
+}
+
 #famPic{
     content:url("../../images/Family.jpeg");
     height: 300px;
@@ -30,7 +35,7 @@
     padding: 20px;
     
 }
-#blockContain{
+.blockContain{
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -40,11 +45,24 @@
     width: 80%;
    
 }
+#mapContain{
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+#mapContain img{
+  width: 45%;
+  border-radius: 10px
+}
+
 @media only screen and (max-width: 520px){
     #famPic{
         height: 190px;
     }
     #introText{
+        width: 100%;
+    }
+    #mapContain img{
         width: 100%;
     }
 }
