--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -41,6 +41,11 @@ h1 {
   width: 100%;
 }
 
+#mainContain{
+  
+    background-color: var(--Grain);
+  
+}
 @media only screen and (max-width: 700px) {
   .topSectionBlock {
     width: 100%;
