--- a/src/components/Nav/style.css
+++ b/src/components/Nav/style.css
@@ -1,11 +1,11 @@
 
 #logoContain{
-    grid-column: 1/3;
+    grid-column: 1/6;
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-
+    justify-content: start;
 }
 
 #navLinksContain{
@@ -60,4 +60,18 @@
 .MuiDrawer-paper{
     background-color: var(--Oxblood) !important;
     backdrop-filter: blur(3px);
+}
+
+@media only screen and (max-width: 950px){
+    #logoContain{
+        grid-column: 1/8;
+     
+    
+    }
+    #navLinksContain{
+        grid-column: 8/13;
+        
+        
+    
+    }
 }
