--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -3,7 +3,7 @@
   justify-content: center;
   flex-wrap: wrap;
   margin-top: 10px;
-  margin-bottom: 10px;
+
 }
 .topSectionBlock {
   width: 50%;
@@ -16,6 +16,7 @@
   width: 100px;
   height: 40px;
   border-radius: 5px;
+  margin: 10px;
 }
 h1 {
   text-decoration: underline;
@@ -32,10 +33,7 @@ h1 {
   padding-right: 20px;
 }
 /*  */
-#ministriesGridContainer {
-  display: grid;
-  grid-template-columns: repeat(8, 1fr);
-}
+
 .ministriesRow {
   grid-column: 2/8;
   width: 100%;
@@ -44,6 +42,7 @@ h1 {
 #mainContain{
   
     background-color: var(--Grain);
+    height: 100%;
   
 }
 @media only screen and (max-width: 700px) {
