--- a/src/components/style.css
+++ b/src/components/style.css
@@ -37,7 +37,7 @@
     text-decoration: none;
     
 }
-#firstSlideButton{
+.firstSlideButton{
     background: none;
     width: 80px;
     height: 40px;
@@ -45,7 +45,7 @@
     color: white;
 
 }
-#firstSlideSMButton{
+.firstSlideSMButton{
     display: none;
     background: none;
     width: 80px;
