--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1,8 +1,8 @@
 .carousel-root{
     z-index: 1;
 
-   top: 1px
-    
+   top: 1px;
+   
     
 }
 .carousel-screens{
@@ -13,10 +13,11 @@
 #firstSlide{
     background: linear-gradient(
         to top,
-        rgba(0,0,0, 0.8),
-        rgba(0,0,0, 0.0),
-        rgba(255, 255, 255, 0.8)
-      ),url(../images/plant.jpg);
+        
+        rgba(0,0,0, 0.5),
+        rgba(0,0,0, 0.3),
+        rgba(0,0,0, 0.5)
+      ),url(../images/farmland.jpg);
     /* background: url(../images/plant.jpg); */
     background-repeat: no-repeat;
     background-size: cover;
@@ -33,7 +34,7 @@
 }
 
 #costaRicaHeader h1{
-    color: black;
+    color: rgb(255, 255, 255);
     text-decoration: none;
     
 }
@@ -81,6 +82,7 @@
     background-color: rgba(26, 26, 26, 0.8);
     border-radius: 10px;
     padding: 80px 40px 80px 40px;
+    
 }
 @media only screen and (max-width: 1271px){
     #firstSlideButtonContain{
@@ -108,6 +110,7 @@
     height: 100%;
     width: 100%;
 }
+
 #secondBack{
     width: 33.3%;
     height: 100%;
